--- a/index.html
+++ b/index.html
@@ -324,15 +324,15 @@
    <section class="page-section " id="team">
       <div class="container">
          <div class="text-center">
-            <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Team dibalik layar</h2>
+            <h3 class="section-subheading text-muted">Yang membuat ini semua.</h3>
          </div>
          <div class="row">
             <div class="col-lg-4">
                <div class="team-member">
-                  <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="" />
-                  <h4>Kay Garland</h4>
-                  <p class="text-muted">Lead Designer</p>
+                  <img class="mx-auto rounded-circle" src="assets/img/team/Jep.jpg" alt="" />
+                  <h4>Jefta Benedict Ampouw</h4>
+                  <p class="text-muted">UI/UX Designer</p>
                   <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                   <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                   <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
@@ -340,9 +340,9 @@
             </div>
             <div class="col-lg-4">
                <div class="team-member">
-                  <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="" />
-                  <h4>Larry Parker</h4>
-                  <p class="text-muted">Lead Marketer</p>
+                  <img class="mx-auto rounded-circle" src="assets/img/team/ndre.jpg" alt="" />
+                  <h4>Andreas Yoseph Liandy</h4>
+                  <p class="text-muted">UI/UX Designer</p>
                   <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                   <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                   <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
@@ -350,9 +350,9 @@
             </div>
             <div class="col-lg-4">
                <div class="team-member">
-                  <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
-                  <h4>Diana Petersen</h4>
-                  <p class="text-muted">Lead Developer</p>
+                  <img class="mx-auto rounded-circle" src="assets/img/team/Sam.jpg" alt="" />
+                  <h4>Samuel Juan Pranoto</h4>
+                  <p class="text-muted">Web Developer</p>
                   <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                   <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                   <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
@@ -361,8 +361,8 @@
          </div>
          <div class="row">
             <div class="col-lg-8 mx-auto text-center">
-               <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque,
-                  laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+               <p class="large text-muted">Kami bertiga yang merancang website ini dengan sedemikian rupa
+                  menjadi tampilan yang bagus di mata para pelanggan.</p>
             </div>
          </div>
       </div>
@@ -371,8 +371,8 @@
    <section class="page-section" id="contact">
       <div class="container">
          <div class="text-center">
-            <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Kontak kami</h2>
+            <h3 class="section-subheading text-muted">Berikut adalah kontak yang dapat dihubungi</h3>
          </div>
          <form id="contactForm" name="sentMessage" novalidate="novalidate">
             <div class="row align-items-stretch mb-5">
