--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
    <meta name="description" content="" />
    <meta name="author" content="" />
-   <title>Pegadaian</title>
+   <title>PT. PANCONG SEJAHTERA</title>
    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
    <!-- Font Awesome icons (free version)-->
    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -38,6 +38,7 @@
                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#syarat">Syarat</a></li>
                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>
                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+               <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://samueljuan.github.io/PT-Pancong-Sejahtera-lapak/">Lapak</a></li>
             </ul>
          </div>
       </div>
@@ -369,9 +370,9 @@
                   <img class="mx-auto rounded-circle" src="assets/img/team/Jep.jpg" alt="" />
                   <h4>Jefta Benedict Ampouw</h4>
                   <p class="text-muted">UI/UX Designer</p>
-                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
                </div>
             </div>
             <div class="col-lg-4">
@@ -379,9 +380,9 @@
                   <img class="mx-auto rounded-circle" src="assets/img/team/ndre.jpg" alt="" />
                   <h4>Andreas Yoseph Liandy</h4>
                   <p class="text-muted">UI/UX Designer</p>
-                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
                </div>
             </div>
             <div class="col-lg-4">
@@ -419,10 +420,10 @@
                   </p>
 
                   <p class="mb-0 font-weight-bold">Telepon</p>
-                  <p class="mb-4"><a href="tel: +62-22-201-2186">+62 22-201 2186 </a></p>
+                  <p class="mb-4"><a href="tel:+62-22-201-2186">+62 22-201 2186 </a></p>
 
                   <p class="mb-0 font-weight-bold">Email Address</p>
-                  <p class="mb-0"><a href="cs@maranatha.edu">cs@maranatha.edu</a></p>
+                  <p class="mb-0"><a href="mailto: cs@maranatha.edu">cs@maranatha.edu</a></p>
                </div>
             </div>
 
